--- a/src/vnsw/agent/contrail/windows/msi/agent_msi.wxs
+++ b/src/vnsw/agent/contrail/windows/msi/agent_msi.wxs
@@ -11,10 +11,10 @@
                         <Component Id="AgentMainExe" Guid="0AA4E35B-89F0-4E60-8D1C-F79BFBE49F78" Win64="yes">
                             <File Id="AgentMainExe" Source="build/debug/vnsw/agent/contrail/contrail-vrouter-agent.exe"/>
                         </Component>
-                        <Component Id="AgentServiceWrapperExe" Guid="8312f7da-bbd9-414c-8807-e280a863323a" Win64="yes">
+                        <Component Id="AgentServiceWrapperExe" Guid="8A6640CF-5EA0-4F16-A006-0991147E0D9E" Win64="yes">
                             <File Id="AgentServiceWrapperExe" Name="contrail-vrouter-agent-sw.exe" Source="build/bin/winsw.exe"/>
                             <ServiceInstall Id="CreateService" Name="ContrailAgent" DisplayName="ContrailAgent" Type="ownProcess" Start="demand" ErrorControl="normal"/>
-                            <ServiceControl Id="DeleteService" Name="ContrailAgent" Remove="uninstall"/>
+                            <ServiceControl Id="DeleteService" Name="ContrailAgent" Remove="uninstall" Wait="yes"/>
                         </Component>
                         <Component Id="VRouterHypervScript" Guid="2E5ED884-4461-4852-B841-CF6FE4E1E6B7" Win64="yes">
                             <File Id="VRouterHypervScript" Source="controller/src/vnsw/opencontrail-vrouter-netns/opencontrail_vrouter_netns/vrouter_hyperv.py" />
@@ -37,7 +37,7 @@
                         <Component Id="SampleConfig" Guid="5E840E9E-96D6-41F4-A384-1500A089CAEB" Win64="yes">
                             <File Id="SampleConfig" Name="contrail-vrouter-agent.conf.sample" Source="controller/src/vnsw/agent/contrail-vrouter-agent.conf"/>
                         </Component>
-                        <Component Id="AgentServiceWrapperConfig" Guid="3e05ee03-a5a5-45f5-8abc-5cc5f952a6d2" Win64="yes">
+                        <Component Id="AgentServiceWrapperConfig" Guid="3DE6D859-E950-40EE-9A36-0A894AFF1FCD" Win64="yes">
                             <File Id="AgentServiceWrapperConfig" Name="contrail-vrouter-agent-sw.xml" Source="controller/src/vnsw/agent/contrail/windows/service_config/service-wrapper.xml"/>
                         </Component>
                     </Directory>
