--- a/src/vnsw/agent/contrail/windows/msi/agent_msi.wxs
+++ b/src/vnsw/agent/contrail/windows/msi/agent_msi.wxs
@@ -1,5 +1,4 @@
 <?xml version="1.0"?>
-
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <Product Id="0BA1E738-4DB7-4871-898C-545F16426BAF" UpgradeCode="488D475D-E73D-46AF-BEE6-173BE24FAF33" Name="Agent" Version="0.0.1" Manufacturer="Juniper Networks" Language="1033">
         <Package InstallerVersion="200" Compressed="yes" Comments="Windows Installer Package" Platform="x64"/>
@@ -75,7 +74,7 @@
             <ComponentRef Id="ContrailVrouterAgentConfig"/>
         </Feature>
 
-        <CustomAction Id="InstallContrailVrouterApi" Property="InstallContrailVrouterApiProperty" Value="&quot;pip2.exe&quot; install &quot;[#ContrailVrouterApi]&quot;" Execute="immediate"/>
+        <CustomAction Id="InstallContrailVrouterApi" Property="InstallContrailVrouterApiProperty" Value="&quot;pip2.exe&quot; install --upgrade &quot;[#ContrailVrouterApi]&quot;" Execute="immediate"/>
         <CustomAction Id="InstallContrailVrouterApiProperty" BinaryKey="WixCA" DllEntry="CAQuietExec64" Execute="deferred" Return="check" Impersonate="no"/>
 
         <CustomAction Id="UnInstallContrailVrouterApi" Property="UnInstallContrailVrouterApiProperty" Value="&quot;pip2.exe&quot; uninstall -y contrail-vrouter-api" Execute="immediate"/>
