--- a/src/vnsw/agent/contrail/windows/msi/agent_msi.wxs
+++ b/src/vnsw/agent/contrail/windows/msi/agent_msi.wxs
@@ -27,8 +27,8 @@
                             <ServiceInstall Id="CreateService" Name="ContrailAgent" DisplayName="ContrailAgent" Type="ownProcess" Start="demand" ErrorControl="normal"/>
                             <ServiceControl Id="DeleteService" Name="ContrailAgent" Remove="both" Stop="both" Wait="yes"/>
                         </Component>
-                         <Component Id="ContrailVrouterApi" Guid="21F50C2B-7F38-493B-B545-EC7DED2CB2F7" Win64="yes">
-                            <File Id="ContrailVrouterApi" Source="build\noarch\contrail-vrouter-api\dist\contrail-vrouter-api-1.0.tar.gz"/>
+                        <Component Id="ContrailVrouterApi" Guid="21F50C2B-7F38-493B-B545-EC7DED2CB2F7" Win64="yes">
+                            <File Id="ContrailVrouterApi" Source="build/noarch/contrail-vrouter-api/dist/contrail-vrouter-api-1.0.tar.gz"/>
                         </Component>
                         <Component Id="VRouterHypervScript" Guid="2E5ED884-4461-4852-B841-CF6FE4E1E6B7" Win64="yes">
                             <File Id="VRouterHypervScript" Source="controller/src/vnsw/opencontrail-vrouter-netns/opencontrail_vrouter_netns/vrouter_hyperv.py" />
